--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>edit by Akshay Wariwale</strong> tag and its contents.</p>
+    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>edit by Akshay</strong> tag and its contents.</p>
   </body>
 </html>
